kursus side+ header + fejl

--- a/hudpleje.html
+++ b/hudpleje.html
@@ -13,17 +13,22 @@
 	
 <body>
 <header>
-  <section class="logo"> </section>
+  <section class="logo">
+	  <a href="index.html">
+		  <img alt="logo" src="billeder/logo.jpg"> </a>
+	</section>
   <section class="search">
     <textarea> </textarea>
   </section>
   <section class="head-icons">
-    <article class="bruger"><i class="fa fa-user-o" aria-hidden="true"></i> </article>
-    <article class="kurv"><i class="fa fa-shopping-basket" aria-hidden="true"></i> </article>
-  </section>
-  <section class="book"> </section>
+    <a href="#" class="bruger"> <i class="fa fa-user-o" aria-hidden="true"></i></a>
+    <a href="#" class="kurv"><i class="fa fa-shopping-basket" aria-hidden="true"></i> </a>
+ <section class="book">
+	<a class="bookknap" href="#">Book her</a>
+	</section> 
+	</section>
+  
 </header>
-
 	
 		<nav>
 	
@@ -68,32 +73,43 @@
 	
 	
 	<section class="pakke1">
+		<article class="pakkebeskrivelser">
 		<h3>Sølv</h3>
 		<p>Ganske lækker behandling hvor der kan indgå alt det nedenstående med tiden bruges på det der er vigtigst, efter aftale med dig. </p> <p>Tid 60 min</p>
 		<ul>
 		
 		</ul>
+				</article>
+	<article class="pakkepris">
 		<h3 class="pris">795,-</h3>
+		</article>
 	</section>
 	
 	<section class="pakke2">
+		<article class="pakkebeskrivelser">
 		<h3>Guld</h3>
 		<p>
 		Ganske lækker behandling hvor der kan indgå alt det nedenstående med tiden bruges på det der er vigtigst, efter aftale med dig. </p> <p>Tid 75 min.</p>
 		<ul>
 		
 		</ul>
+				</article>
+	<article class="pakkepris">
 		<h3 class="pris">1095,-</h3>
+		</article>
 	</section>
 	
 		<section class="pakke3">
+			<article class="pakkebeskrivelser">
 		<h3>Diamant</h3>
 		<p>Luksus behandling der skal friske dig helt op fra top til tå. Afslapning til det yderste og en ny og frisk udgave af dig selv.
 		Ultimativ forkælelse med fantastiske resultater </p>
 		<p></p>Tid 90 min.
 
-		
+			</article>
+	<article class="pakkepris">
 		<h3 class="pris">1295,-</h3>
+			</article>
 	</section>
 	  
 	  
