--- a/bryllup.html
+++ b/bryllup.html
@@ -12,16 +12,23 @@
 
 <body>
 <header>
-  <section class="logo"> </section>
+  <section class="logo">
+	  <a href="index.html">
+		  <img alt="logo" src="billeder/logo.jpg"> </a>
+	</section>
   <section class="search">
     <textarea> </textarea>
   </section>
   <section class="head-icons">
-    <article class="bruger"><i class="fa fa-user-o" aria-hidden="true"></i> </article>
-    <article class="kurv"><i class="fa fa-shopping-basket" aria-hidden="true"></i> </article>
-  </section>
-  <section class="book"> </section>
+    <a href="#" class="bruger"> <i class="fa fa-user-o" aria-hidden="true"></i></a>
+    <a href="#" class="kurv"><i class="fa fa-shopping-basket" aria-hidden="true"></i> </a>
+ <section class="book">
+	<a class="bookknap" href="#">Book her</a>
+	</section> 
+	</section>
+  
 </header>
+	
 <nav>
   <div class="styling-drop">
     <button class="dropknap1" onclick="styleFunction()">Styling <i class="fa fa-caret-down"></i> </button>
@@ -32,6 +39,12 @@
     <div class="indhold" id="behandlingDropdown"> <a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> <a href="hudpleje.html">Skræddersyet hudpleje</a> <a href="manicure.html">Manicure & pedicure</a> <a href="bryn.html">Bryn & vipper</a> <a href="voks.html">Voks</a> <a href="permanent.html">Permanent makeup</a> <a href="kropsbehandlinger.html">Kropsbehandlinger</a> </div>
   </div>
   <a href="kurser.html">Kurser</a> <a href="om.html">Om</a> <a href="shop.html">Shop</a> <a href="kontakt.html">Kontakt</a> </nav>
+
+
+	
+	
+	
+	
 <main>
   <div class="wrapper">
     <section class=hero> <img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
@@ -39,9 +52,11 @@
       <aricle class="herotxt" >
         <h1> Hår og makeup til bruden</h1>
       </aricle>
+		
     </section>
     <section class="pakke1">
-      <h3>Eventyrlig</h3>
+      <article class="pakkebeskrivelser">
+		<h3>Eventyrlig</h3>
       <p>Dit hår og makeup skal være skudsikkert. Det skal fotografere korrekt og holde natten lang. Med denne basis pakke får du sat hår og makeup så du kan se perfekt ud på din store dag </p>
       <ul>
         <li><i class="fa fa-check"></i> Hår og makeup</li>
@@ -50,9 +65,13 @@
         <li class="uncheck"><i class="fa fa-times"></i> Manicure</li>
         <li class="uncheck"><i class="fa fa-times"></i> lash lift</li>
       </ul>
+	</article>
+	<article class="pakkepris">
       <h3 class="pris">2699,-</h3>
     </section>
+	</article>
     <section class="pakke2">
+		<article class="pakkebeskrivelser">
       <h3>Rød løber</h3>
       <p>Hudplejen er ekstrem vigtig før makeup, en sund og ren hud udløser en fantastisk glow, huden oser af sundhed, skønhed og yderst frisk. Makeup binder langt bedre på en velplejet hud, udføres på dagen.</p>
       <ul>
@@ -62,9 +81,13 @@
         <li class="uncheck"><i class="fa fa-times"></i> Manicure</li>
         <li class="uncheck"><i class="fa fa-times"></i> lash lift</li>
       </ul>
+			</article>
+	<article class="pakkepris">
       <h3 class="pris">3399,-</h3>
+		</article>
     </section>
     <section class="pakke3">
+		<article class="pakkebeskrivelser">
       <h3>Vip Bruden</h3>
       <p>Vil du have den fulde følelse af at blive behandling som en stjerne, så skal du booke denne pakke. Behandlinger udføres før dit bryllup og hår og makeup styles på dagen. </p>
       <ul>
@@ -74,7 +97,10 @@
         <li><i class="fa fa-check"></i> Manicure</li>
         <li><i class="fa fa-check"></i> lash lift</li>
       </ul>
+			</article>
+	<article class="pakkepris">
       <h3 class="pris">4499,-</h3>
+		</article>
     </section>
     <section class="info">
       <h2>For at booke tid, ring til stylisten på </h2>
@@ -84,38 +110,60 @@
 	  
 	  
 	  
+	  
     <section class="priser">
+      <h3 id="proveoverskrift">Prøvesseioner</h3>
+      <h3 id="pigeoverskrift">Brudepiger</h3>
 		
-      <h3 class="rakke1">Prøvesessioner</h3>
-      <h4 class="rakke1">Hår</h4>
-      <p class="rakke1">Få sat dit hår som du vil have det på den store dag. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
-      <h4 class="rakke1">Makeup</h4>
-      <p class="rakke1">Få lagt din makeup som du vil have det på den store dag. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
-      <h4 class="rakke1">Hår og makeup</h4>
-      <p class="rakke1">Både hår og makeup præcis som det skal være på dagen for bryllupet. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
-      <p class="rakke1">Kørsel i resten af Danmark er muligt. Pris efter aftale.</p>
-      <h3 class="rakke1">Kørsel</h3>
-      <h4 class="rakke1">Kørsel Sjælland</h4>
+      <section class="provesek1">
+        <h4 id="provenavn1">Hår</h4>
+        <p id="provebeskrivelse1">Få sat dit hår som du vil have det på den store dag. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
+        <h4 id="provenavn2">Makeup</h4>
+        <p id="provebeskrivelse2">Få lagt din makeup som du vil have det på den store dag. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
+        <h4 id="provenavn3">Hår og makeup</h4>
+        <p id="provebeskrivelse3">Både hår og makeup præcis som det skal være på dagen for bryllupet. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
+        <h4 id="provepris1">550,-</h4>
+        <h4 id="provepris2">550,-</h4>
+        <h4 id="provepris3">899,-</h4>
+      </section>
 		
-      <h4 class="rakke2">550,-</h4>
-      <h4 class="rakke2">550,-</h4>
-      <h4 class="rakke2">899,-</h4>
-      <h4 class="rakke2">550,-</h4>
+      <section class="pigesek1">
+        <h4 id="pigenavn1">Hår</h4>
+        <p id="pigebeskrivelse1">Få sat hår på brudepiger på samme adresse som bruden eller i salonen. </p>
+        <h4 id="pigenavn2">Makeup </h4>
+        <p id="pigebeskrivelse2">Make up på brudepiger på samme adresse som bruden eller i salonen.</p>
+        <h4 id="pigenavn3">Hår og makeup</h4>
+        <p id="pigebeskrivelse3">Både hår og makeup på brudepiger på samme adresse som bruden eller i salonen.</p>
+        <h4 id="pigepris1">999,-</h4>
+        <h4 id="pigepris2">899,-</h4>
+        <h4 id="pigepris3">1599,-</h4>
+      </section>
 		
-      <h3 class="rakke3">Brudepiger</h3>
-      <h4 class="rakke3">Hår</h4>
-      <p class="rakke3">Få sat hår på brudepiger på samme adresse som bruden eller i salonen.</p>
-      <h4 class="rakke3">Makeup</h4>
-      <p class="rakke3">Make up på brudepiger på samme adresse som bruden eller i salonen.</p>
-      <h4 class="rakke3">Hår og makeup</h4>
 		
-      <h4 class="rakke4">999,-</h4>
-      <h4 class="rakke4">899,-</h4>
-      <h4 class="rakke4">1599,-</h4>
+	<h3 id="koreoverskrift">Kørsel</h3>
+		
+      <section class="koresek1">
+        <h4 id="korenavn1">Kørsel sjælland</h4>
+		<p id="koreeskrivelse1">Kørsel i resten af Danmark er muligt. Pris efter aftale.</p>
+		 
+		<h4 id="korepris1">550,-</h4>
+		  
+     
+      </section>
+		
+		
+		
+		<section>
+			
+		</section>
+		
+	
+		
+		
+<p class="mereinfo">
+				Er du interesseret i at se flere billeder fra MyStylist. Så gå ind og følg med på vores <a class="link" href="https://www.instagram.com/mystylist/?hl=en">Instagram</a>, og/eller på vores <a class="link" href="https://www.facebook.com/myStylist.stylist">facebook</a> side. </p>
+		
     </section>
-	  
-	  
-	  
   </div>
 </main>
 <footer>
