--- a/om.html
+++ b/om.html
@@ -13,17 +13,22 @@
 	
 <body>
 <header>
-  <section class="logo"> </section>
+  <section class="logo">
+	  <a href="index.html">
+		  <img alt="logo" src="billeder/logo.jpg"> </a>
+	</section>
   <section class="search">
     <textarea> </textarea>
   </section>
   <section class="head-icons">
     <a href="#" class="bruger"> <i class="fa fa-user-o" aria-hidden="true"></i></a>
     <a href="#" class="kurv"><i class="fa fa-shopping-basket" aria-hidden="true"></i> </a>
-  </section>
-  <section class="book"> </section>
+ <section class="book">
+	<a class="bookknap" href="#">Book her</a>
+	</section> 
+	</section>
+  
 </header>
-
 	<nav>
 	
   <div class="styling-drop">
