ret mpbil header og tilføj slideshow

--- a/hudpleje.html
+++ b/hudpleje.html
@@ -17,17 +17,18 @@
 	  <a href="index.html">
 		  <img alt="logo" src="billeder/logo.jpg"> </a>
 	</section>
-  <section class="search">
-    <textarea> </textarea>
-  </section>
+ 
   <section class="head-icons">
     <a href="#" class="bruger"> <i class="fa fa-user-o" aria-hidden="true"></i></a>
     <a href="#" class="kurv"><i class="fa fa-shopping-basket" aria-hidden="true"></i> </a>
  <section class="book">
 	<a class="bookknap" href="#">Book her</a>
-	</section> 
+	</section>  
+	
 	</section>
-  
+    <section class="search">
+   <input type="text" value="Søg" > 
+  </section>
 </header>
 	
 		<nav>
