--- a/permanent.html
+++ b/permanent.html
@@ -17,19 +17,19 @@
 	  <a href="index.html">
 		  <img alt="logo" src="billeder/logo.jpg"> </a>
 	</section>
-  <section class="search">
-    <textarea> </textarea>
-  </section>
+ 
   <section class="head-icons">
     <a href="#" class="bruger"> <i class="fa fa-user-o" aria-hidden="true"></i></a>
     <a href="#" class="kurv"><i class="fa fa-shopping-basket" aria-hidden="true"></i> </a>
  <section class="book">
 	<a class="bookknap" href="#">Book her</a>
-	</section> 
+	</section>  
+	
 	</section>
-  
+    <section class="search">
+   <input type="text" value="Søg" > 
+  </section>
 </header>
-
 	
 	
 
@@ -154,7 +154,14 @@ Opfølgning indbefatter en enkel optegning, der er ikke opfølgende behandling p
  </section>
 	  
 	 
-	  
+	  <div class="slideshow-container">
+  <div class="billede fade"> <img src="https://cdn7.dissolve.com/p/D1129_19_611/D1129_19_611_1200.jpg" style="width:100%"> </div>
+  <div class="billede fade"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/2010-kodiak-bear-1.jpg/440px-2010-kodiak-bear-1.jpg" style="width:100%"> </div>
+  <div class="billede fade"> <img src="https://previews.123rf.com/images/jmrocek/jmrocek1911/jmrocek191100010/133248099-an-adorable-cub-and-adult-female-of-brown-bear-ursus-arctos-with-fluffy-coat-united-in-the-middle-of.jpg" style="width:100%"> </div>
+  <a class="prev" onclick="skiftSlide(-1)">&#10094; <!--pil--></a> <a class="next" onclick="skiftSlide(1)">&#10095; <!--pil--></a> </div>
+<br>
+<div class="prikker"> <span class="prik" onclick="angivSlide(1)"></span> <span class="prik" onclick="angivSlide(2)"></span> <span class="prik" onclick="angivSlide(3)"></span> </div>
+<p class="mereinfo"> Er du interesseret i at se flere billeder fra MyStylist. Så gå ind og følg med på vores <a class="link" href="https://www.instagram.com/mystylist/?hl=en">Instagram</a>, og/eller på vores <a class="link" href="https://www.facebook.com/myStylist.stylist">facebook</a> side. </p>
 	
 	</div>
 <footer>
